all tests seem to pass. code appears complete before cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Final Project Commitment Form CSC 270.pdf
 Final Project Description.pdf
 skeleton assembler
 skeleton assembler/*
+Archive/
+CSC 270 Final Grade Sheet.pdf
